[tool.poetry]
name = "ssafy-rag-chatbot"
version = "0.1.0"
description = ""
authors = ["jiwoochris <travelandi01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
langchain-openai = "^0.2.5"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langchain-community = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
